Day 1: add project feature
